library redesigns, error handling, menu's, more centralized collection. still much to test